--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
 <!--Include Scripts-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/0.3.0/speechkitt.min.js"></script>
 <script  src="js/loader.js" type="module"></script>
 </body>
 </html>
