--- a/public/js/game/io/index.html
+++ b/public/js/game/io/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Enders Game</title>
+    <title>Test Game</title>
 </head>
 <body>
 
